--- a/app/ui/ui.global.css
+++ b/app/ui/ui.global.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.headerFont {
+  font-size: 2.25rem; /* text-4xl */
+  font-weight: 600; /* font-semibold */  
+}
+
+
 /* Font colors */
 .text-primary {
   color: #0f006f; /* previously in heroSection */
