feat: feature refinement

--- a/app/ui/features/header-footer/HF.module.css
+++ b/app/ui/features/header-footer/HF.module.css
@@ -1,7 +1,7 @@
 
 .logoBG{
   background-color: #a7d8e7;
-  background-size: 100% 2px;
+  background-size: 100% px;
   background-position: 10 10%;
   border-radius: 5px;
   padding-left: 4px;
